# auth-service

./: .gitignore  .pre-commit-config.yaml  Makefile  README.md  bandit.yaml  conftest.py  db_schema.sql  pyproject.toml  pytest.ini  setup.cfg
ci/demo/: Dockerfile  demo-db.env  demo.env  docker-compose.yaml  nginx-demo.env
ci/local/: .env.auth-db  Dockerfile  docker-compose.yaml  local.env.example
nginx/: nginx.conf
nginx/conf.d/: site.conf
src/: alembic.ini  main.py
src/alembic/: env.py
src/alembic/versions/: 0a13c54fb70f_create_tables.py  5ce3150a5d14_create_user_table.py  64059d339fe9_start_app.py  88e720a13a21_start_app.py  bdda5d322107_create_models.py  eeff8a0c1a67_start_app.py  f03c7b0a32c2_start_app.py
src/api/: healthcheck.py
src/api/api_v1/: auth.py  claim.py  role.py  user_session.py
src/core/: config.py
src/db/: postgres.py  redis.py
src/models/: __init__.py  auth_user.py  auth_user_entity.py  base.py  claim.py  role.py  role_auth_user.py  user_session.py
src/models/redis_models/: base_redis_model.py  user_sessions.py
src/repository/: __init__.py  auth_repository.py  base_repository.py  claim_repository.py  role_repository.py  user_session_repository.py
src/schemas/: __init__.py  base_schema.py  claims.py  role.py  token.py  user.py  user_session.py
src/services/: __init__.py  auth_jwt.py  auth_service.py  base_service.py  claim_service.py  role_service.py  user_session_service.py
src/utils/: __init__.py  consts.py  create_admin.py  pagination.py
tests/functional/: .env.example  Dockerfile  settings.py
tests/functional/project_fixtures/: client_fixtures.py  db_fixtures.py  registration_fixtures.py  request_fixtures.py
tests/functional/src/: test_auth.py  test_claims.py  test_healthcheck.py
tests/functional/testdata/: database_mapping.py
tests/functional/utils/: utils.py
tests/unit/: test_pagination.py
